# alpha_tui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  demo.tape  flake.nix  instructions.md  package_release.sh  shell.nix
.github/: dependabot.yml
.github/workflows/: coverage.yml  rust.yml
docs/: changelog.md  cli.md  future_ideas.md  instructions.md  interface_and_usage.md
examples/: allowed_instructions.json  allowed_instructions.txt  instruction_whitelist.txt  loop_example.alpha  matrix_mult.alpha  memory_cells.cells  memory_config.json  memory_config.txt  stack_fun.alpha
examples/programs/: calculate_primes.alpha  error.alpha  faculty.alpha  index_memory_cells.alpha  loop_example.alpha  matrix_mult.alpha  stack.alpha  stack_fun.alpha  stack_loop.alpha
src/: base.rs  cli.rs  instructions.rs  main.rs  runtime.rs  tui.rs  utils.rs
src/app/: content.rs  keybindings.rs  mod.rs  run_instruction.rs  ui.rs
src/app/ui/: mod.rs  (+2 more)
src/commands/: load.rs  mod.rs  sandbox.rs
src/instructions/: error_handling.rs  instruction_config.rs  mod.rs  new_backend.rs  parsing.rs  tests.rs
src/instructions_new/: error_handling.rs  mod.rs  parsing.rs  tests.rs
src/instructions_old/: error_handling.rs  mod.rs
src/runtime/: builder.rs  builder_new.rs  error_handling.rs  memory_config.rs  mod.rs
src/tui/: content.rs  keybindings.rs  mod.rs  run_instruction.rs  state.rs  ui.rs
test_sources/: README.md
test_sources/test_bai_error/: program.alpha
tests/: README.md  allowed_instructions.rs  cli.rs  eample_allowed_instructions.rs  error_handling.rs  example_programs.rs  memory_config.rs
tests/input/: test_example_allowed_instructions_file_program.alpha
themes/: default-old.json  dracula.json  gray.json  themes.md
(+38 files in other folders)
