[package]
name = "alpha_tui"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "0.26", features = ["all-widgets"]}
crossterm = "0.27"
clap = { version = "4.3", features = ["derive", "color"] }
thiserror = "1"
miette = { version = "7.2", features = ["fancy"] }
text_align = "0.3.1"
anyhow = "1.0.82"
trie-rs = "0.2.0"

[dev-dependencies]
assert_cmd = "2"
