[package]
name = "alpha_tui"
version = "1.4.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = { version = "=0.26.1", features = ["all-widgets"]} # pinned to v0.26.1 because panic see https://github.com/ratatui-org/ratatui/issues/1032
crossterm = { version = "0.27", features = ["events"] }
clap = { version = "4.3", features = ["derive", "color"] }
thiserror = "1"
miette = { version = "7.2", features = ["fancy"] }
text_align = "0.3"
anyhow = "1"
trie-rs = "0.3"

# serialization, used for memory config file
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
